--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shallow-time-web",
+  "name": "artur-web",
   "version": "1.0.0",
-  "description": "Shallow Time (Working Title) Web Interface",
+  "description": "A.R.T.U.R. Web Interface",
   "author": "Manuel Wieser <office@manuelwieser.com>",
   "private": true,
   "scripts": {
