--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "normalize.css": "^7.0.0",
     "three": "^0.86.0",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
