--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "normalize.css": "^7.0.0",
     "three": "^0.86.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue-touch": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
