--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tweenjs/tween.js": "^17.1.0",
     "array-shuffle": "^1.0.1",
     "axios": "^0.16.2",
+    "debounce": "^1.0.2",
     "normalize.css": "^7.0.0",
     "three": "^0.86.0",
     "vue": "^2.3.3",
